# fast-jump

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  tty_redirect.rs  tui.rs
src/cli/: events.rs  mod.rs  render.rs
src/engine/: db.rs  mod.rs  score.rs  walker.rs
