[package]
name = "fast-jump"
version = "0.1.0"
edition = "2024"
description = "A blazing-fast fuzzy directory jumper"
repository = "https://github.com/Kandarp05/fast-jump"
license = "MIT"
keywords = ["cli", "directory", "navigation", "fuzzy", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "fj"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"
libc = "0.2.184"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tui-input = "0.15.0"
